// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order should render an order card 1`] = `
<CustomCard
  color="WARNING"
>
  <CardSection
    alignItems="flex-start"
    justifyContent="center"
  >
    <styled.div>
      <div>
        <styled.label>
          <FormattedMessage
            id="orderNumber"
            values={Object {}}
          />
        </styled.label>
        <div>
          #123
        </div>
      </div>
    </styled.div>
    <styled.div>
      <div>
        <styled.label>
          <FormattedMessage
            id="orderCycle"
            values={Object {}}
          />
        </styled.label>
        <div>
          cycle
        </div>
      </div>
      <div>
        <styled.label>
          <FormattedMessage
            id="orderDate"
            values={Object {}}
          />
        </styled.label>
        <div>
          date
        </div>
      </div>
      <div>
        <styled.label>
          <FormattedMessage
            id="orderEstimatedDeliveryDate"
            values={Object {}}
          />
        </styled.label>
        <div>
          estimatedDeliveryDate
        </div>
      </div>
    </styled.div>
  </CardSection>
  <CardSection
    alignItems="flex-start"
    justifyContent="center"
  >
    <styled.div>
      <div>
        <styled.label>
          <FormattedMessage
            id="orderValue"
            values={Object {}}
          />
        </styled.label>
        <div>
          R$ 123
        </div>
      </div>
    </styled.div>
    <styled.div>
      <div>
        <styled.label>
          <FormattedMessage
            id="orderTotalScore"
            values={Object {}}
          />
        </styled.label>
        <div>
          100
        </div>
      </div>
    </styled.div>
  </CardSection>
  <CardSection
    alignItems="center"
    justifyContent="center"
  >
    <styled.div>
      <CustomCardText
        color="WARNING"
      >
        status
      </CustomCardText>
    </styled.div>
    <FormButton
      backgroundColor="#fff"
      disabled={false}
      flat={false}
      label={
        <styled.label>
          <FormattedMessage
            id="orderDetails"
            values={Object {}}
          />
        </styled.label>
      }
      labelColor="#000"
      link="link"
      primary={false}
    />
  </CardSection>
</CustomCard>
`;

exports[`Order should render an order card without some field 1`] = `
<CustomCard
  color="DANGER"
>
  <CardSection
    alignItems="flex-start"
    justifyContent="center"
  >
    <styled.div>
      <div>
        <styled.label>
          <FormattedMessage
            id="orderNumber"
            values={Object {}}
          />
        </styled.label>
        <div>
          #123
        </div>
      </div>
    </styled.div>
    <styled.div />
  </CardSection>
  <CardSection
    alignItems="flex-start"
    justifyContent="center"
  >
    <styled.div>
      <div>
        <styled.label>
          <FormattedMessage
            id="orderValue"
            values={Object {}}
          />
        </styled.label>
        <div>
          R$ 123
        </div>
      </div>
    </styled.div>
    <styled.div>
      <div>
        <styled.label>
          <FormattedMessage
            id="orderTotalScore"
            values={Object {}}
          />
        </styled.label>
        <div>
          100
        </div>
      </div>
    </styled.div>
  </CardSection>
  <CardSection
    alignItems="center"
    justifyContent="center"
  >
    <styled.div>
      <CustomCardText
        color="DANGER"
      >
        status
      </CustomCardText>
    </styled.div>
    <FormButton
      backgroundColor="#fff"
      disabled={false}
      flat={false}
      label={
        <styled.label>
          <FormattedMessage
            id="orderDetails"
            values={Object {}}
          />
        </styled.label>
      }
      labelColor="#000"
      link="link"
      primary={false}
    />
  </CardSection>
</CustomCard>
`;

exports[`Order should render an order card without status 1`] = `
<CustomCard
  color="SUCCESS"
>
  <CardSection
    alignItems="flex-start"
    justifyContent="center"
  >
    <styled.div>
      <div>
        <styled.label>
          <FormattedMessage
            id="orderNumber"
            values={Object {}}
          />
        </styled.label>
        <div>
          #123
        </div>
      </div>
    </styled.div>
    <styled.div>
      <div>
        <styled.label>
          <FormattedMessage
            id="orderCycle"
            values={Object {}}
          />
        </styled.label>
        <div>
          cycle
        </div>
      </div>
      <div>
        <styled.label>
          <FormattedMessage
            id="orderDate"
            values={Object {}}
          />
        </styled.label>
        <div>
          date
        </div>
      </div>
      <div>
        <styled.label>
          <FormattedMessage
            id="orderEstimatedDeliveryDate"
            values={Object {}}
          />
        </styled.label>
        <div>
          estimatedDeliveryDate
        </div>
      </div>
    </styled.div>
  </CardSection>
  <CardSection
    alignItems="flex-start"
    justifyContent="center"
  >
    <styled.div>
      <div>
        <styled.label>
          <FormattedMessage
            id="orderValue"
            values={Object {}}
          />
        </styled.label>
        <div>
          R$ 123
        </div>
      </div>
    </styled.div>
    <styled.div>
      <div>
        <styled.label>
          <FormattedMessage
            id="orderTotalScore"
            values={Object {}}
          />
        </styled.label>
        <div>
          100
        </div>
      </div>
    </styled.div>
  </CardSection>
  <CardSection
    alignItems="center"
    justifyContent="center"
  >
    <FormButton
      backgroundColor="#fff"
      disabled={false}
      flat={false}
      label={
        <styled.label>
          <FormattedMessage
            id="orderDetails"
            values={Object {}}
          />
        </styled.label>
      }
      labelColor="#000"
      link="link"
      primary={false}
    />
  </CardSection>
</CustomCard>
`;
